[gd_scene load_steps=4 format=3 uid="uid://8f9x4uweb6jtg"]

[ext_resource type="Script" path="res://algorithms/MachineLearning/ensemble_methods/EnsembleMethods.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="EnsembleMethods" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="BaseModels" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="ModelParticles" type="Node3D" parent="BaseModels"]

[node name="ModelsLabel" type="CSGBox3D" parent="BaseModels"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="EnsembleCore" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="EnsembleHub" type="CSGBox3D" parent="EnsembleCore"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="EnsembleLabel" type="CSGBox3D" parent="EnsembleCore"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="EnsembleMethods" type="Node3D" parent="EnsembleCore"]

[node name="BaggingCore" type="CSGSphere3D" parent="EnsembleCore/EnsembleMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="BoostingCore" type="CSGSphere3D" parent="EnsembleCore/EnsembleMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="VotingCore" type="CSGSphere3D" parent="EnsembleCore/EnsembleMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="StackingCore" type="CSGSphere3D" parent="EnsembleCore/EnsembleMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="BlendingCore" type="CSGSphere3D" parent="EnsembleCore/EnsembleMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="FinalPrediction" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="PredictionParticles" type="Node3D" parent="FinalPrediction"]

[node name="PredictionLabel" type="CSGBox3D" parent="FinalPrediction"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="VotingSystem" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="VotingCore" type="CSGBox3D" parent="VotingSystem"]
size = Vector3(6, 0.5, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="VotingLabel" type="CSGBox3D" parent="VotingSystem"]
size = Vector3(4, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Votes" type="Node3D" parent="VotingSystem"]

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="EnsembleMetrics" type="Node3D" parent="."]

[node name="AccuracyMeter" type="Node3D" parent="EnsembleMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="AccuracyBase" type="CSGBox3D" parent="EnsembleMetrics/AccuracyMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="AccuracyIndicator" type="CSGSphere3D" parent="EnsembleMetrics/AccuracyMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="DiversityMeter" type="Node3D" parent="EnsembleMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="DiversityBase" type="CSGBox3D" parent="EnsembleMetrics/DiversityMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="DiversityIndicator" type="CSGSphere3D" parent="EnsembleMetrics/DiversityMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
